@@ -19,13 +19,16 @@ class IssueStatusesController < ApplicationController
   layout 'base'	
   before_filter :require_admin
 
+  verify :method => :post, :only => [ :destroy, :create, :update, :move ],
+         :redirect_to => { :action => :list }
+         
   def index
     list
     render :action => 'list' unless request.xhr?
   end
 
   def list
-    @issue_status_pages, @issue_statuses = paginate :issue_statuses, :per_page => 10
+    @issue_status_pages, @issue_statuses = paginate :issue_statuses, :per_page => 25, :order => "position"
     render :action => "list", :layout => false if request.xhr?
   end
 
@@ -55,6 +58,21 @@ class IssueStatusesController < ApplicationController
     else
       render :action => 'edit'
     end
+  end
+  
+  def move
+    @issue_status = IssueStatus.find(params[:id])
+    case params[:position]
+    when 'highest'
+      @issue_status.move_to_top
+    when 'higher'
+      @issue_status.move_higher
+    when 'lower'
+      @issue_status.move_lower
+    when 'lowest'
+      @issue_status.move_to_bottom
+    end if params[:position]
+    redirect_to :action => 'list'
   end
 
   def destroy
